--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "get-random-values": "^1.2.0",
     "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
+    "moment": "^2.18.1",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "^0.8.5"
